[package]

name = "munin"
version = "0.0.1"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]

[dependencies.rust-csv]
git = "git://github.com/BurntSushi/rust-csv"

[dependencies.curl]
git = "git://github.com/carllerche/curl-rust"

[dependencies.docopt_macros]
git = "git://github.com/docopt/docopt.rs"
